--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<title>CSS Zen Garden: The Beauty of CSS Design</title>
-
-	<link rel="stylesheet" media="screen" href="/214/214.css?v=8may2013">
+	
+	<link rel="stylesheet" media="screen" href="reset.css">
+	<link rel="stylesheet" media="screen" href="style.css">
+	<link href='http://fonts.googleapis.com/css?family=Lato:400,700,400italic' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="//brick.a.ssl.fastly.net/Telex:400">
 	<link rel="alternate" type="application/rss+xml" title="RSS" href="http://www.csszengarden.com/zengarden.xml">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
