basic element styling

--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
 	
 	<link rel="stylesheet" media="screen" href="reset.css">
 	<link rel="stylesheet" media="screen" href="style.css">
+
+	<!-- typefonts -->
 	<link href='http://fonts.googleapis.com/css?family=Lato:400,700,400italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="//brick.a.ssl.fastly.net/Telex:400">
+	<link href='http://fonts.googleapis.com/css?family=Chivo' rel='stylesheet' type='text/css'>
+	
 	<link rel="alternate" type="application/rss+xml" title="RSS" href="http://www.csszengarden.com/zengarden.xml">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
